--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
-main{
-    min-height: 100vh; 
+main {
+  min-height: 100vh;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: ">";
 }
